--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,78 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* NavBar */
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.4rem 7%;
+  background-color: var(--bg);
+  color: rgba(1, 1, 1, 0.8);
+  border-bottom: 1px solid var(--primary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
+
+.navBar .navBarLogo {
+  font-size: 1.7rem;
+  font-weight: 700;
+  color: #f2e9e4;
+}
+
+.navBar .navBarNav a {
+  color: #f2e9e4;
+  display: inline-block;
+  font-size: 1rem;
+  margin: 0 1rem;
+}
+
+.navBar .navBarNav a:hover {
+  color: var(--primary);
+}
+
+.navBar .navBarNav a::after {
+  content: "";
+  display: block;
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1rem solid var(--primary);
+  transform: scaleX(0);
+  transition: 0.2s linear;
+}
+
+.navBar .navBarNav a:hover::after {
+  transform: scaleX(0.5);
+}
+
+.navBar .navBarExtra a {
+  color: #f2e9e4;
+  margin: 0 0.3rem;
+}
+
+.navBar .navBarExtra a:hover {
+  color: var(--primary);
+}
+
+#hamburgerMenu {
+  display: none;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
