--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --primary: #1e483e;
+  --bg: #f4f3e8;
 }
 
 * {
@@ -33,9 +35,9 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  background-color: var(--bg);
+  background-color: #e6dcc8;
   color: rgba(1, 1, 1, 0.8);
-  border-bottom: 1px solid var(--primary);
+  border-bottom: 2px solid #1e483e;
   position: fixed;
   top: 0;
   left: 0;
@@ -46,11 +48,11 @@ html {
 .navBar .navBarLogo {
   font-size: 1.7rem;
   font-weight: 700;
-  color: #f2e9e4;
+  color: #1e483e;
 }
 
 .navBar .navBarNav a {
-  color: #f2e9e4;
+  color: #1e483e;
   display: inline-block;
   font-size: 1rem;
   margin: 0 1rem;
@@ -74,7 +76,7 @@ html {
 }
 
 .navBar .navBarExtra a {
-  color: #f2e9e4;
+  color: #1e483e;
   margin: 0 0.3rem;
 }
 
@@ -84,6 +86,58 @@ html {
 
 #hamburgerMenu {
   display: none;
+}
+
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../src/assets/home.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+}
+
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+
+.hero .content h1 {
+  font-size: 5em;
+  font-weight: 700;
+  color: #f2e9e4;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.3;
+}
+
+.hero .content p {
+  font-size: 1.6rem;
+  margin-top: 0.5rem;
+  line-height: 1.4;
+  font-weight: 100;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem;
+  color: #f2e9e4;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
 a {
@@ -115,16 +169,18 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #1e483e;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 0px auto -webkit-focus-ring-color;
+}
+
+button:active {
+  background-color: #e6dcc8;
 }
 
 @media (prefers-color-scheme: light) {
