--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,14 @@
 }
 
 .about-section {
-    margin-top: 100px;
+    padding-top: 120px;
     margin-bottom: 50px;
 }
 
 .about-content {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .about-img {
@@ -22,6 +23,10 @@
     text-align: center;
     padding: 17px;
     margin-bottom: 50px
+}
+
+#menu {
+    padding-top: 120px;
 }
 
 .menu-buttons {
@@ -48,11 +53,12 @@ button.active {
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
-    margin-bottom: 45px;
+    padding-bottom: 45px;
+    padding-top: 20px;
 }
 
 .card-content {
-    margin-top: 30px;
+    padding-top: 30px;
     padding-right: 20px;
 }
 
