--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ html {
 }
 
 .navBar .navBarNav a:hover {
-  color: var(--primary);
+  color: #5e533d;
 }
 
 .navBar .navBarNav a::after {
@@ -81,13 +81,14 @@ html {
 }
 
 .navBar .navBarExtra a:hover {
-  color: var(--primary);
+  color: #5e533d;
 }
 
 #hamburgerMenu {
   display: none;
 }
 
+/* Home Section */
 .hero {
   min-height: 100vh;
   display: flex;
@@ -138,6 +139,112 @@ html {
   background-color: var(--primary);
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+/* Contact Section */
+.contact-form {
+  padding: 6.5rem 7% 1.4rem;
+}
+
+.contact-form .row4 {
+  display: flex;
+  margin-top: rem;
+}
+
+.contact-form .row4 form {
+  flex: 1 1 45rem;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.contact-form .row4 form .input-form {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: #e1d9d9;
+  padding-left: 1rem;
+  border: 1px solid #f2e9e4;
+}
+
+.contact-form .row4 form .input-form .icon {
+  color: #213547;
+}
+
+.contact-form .row4 form .input-form input {
+  width: 100%;
+  background: none;
+  padding: 1rem;
+  font-size: 1.2rem;
+  color: #213547;
+}
+
+.contact-form .row4 form .submit-button {
+  margin-top: 2rem;
+  display: inline-block;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  color: #f2e9e4;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  cursor: pointer;
+}
+
+.contact-form .row4 form .message {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.message .success {
+  margin-top: 1rem;
+  color: #05f140;
+  font-size: 1.1rem;
+  position: absolute;
+  transition: 0.3s;
+  animation: buttons 0.1s linear;
+  display: none;
+  text-transform: capitalize;
+}
+.message .error {
+  margin-top: 1rem;
+  color: #da2c38;
+  font-size: 1rem;
+  position: absolute;
+  transition: 0.3s;
+  animation: buttons 0.1s linear;
+  display: none;
+  text-transform: capitalize;
+}
+
+/* Footer */
+
+footer {
+  background-color: #e6dcc8;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+
+footer .socials {
+  /* padding: 1rem 0; */
+  display: inline-block;
+}
+
+footer .socials a {
+  color: #1e483e;
+  margin: 1rem;
+}
+
+footer .socials a:hover {
+  color: #5e533d;
+}
+
+footer .copyright {
+  font-size: 0.7rem;
+  color: #1e483e;
 }
 
 a {
