--- a/src/App.css
+++ b/src/App.css
@@ -66,4 +66,6 @@ button.active {
     max-width: 1285px;
     margin: 0 auto;
     margin-bottom: 40px;
+    margin-top: 10px;
+    padding-top: 120px;
 }
